Shorter url for google?

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
    <string-array name="list_initial_url">
       <item>http://mobile.answers.com/%s</item>
-      <item>http://www.google.com/search?q=%s</item>
+      <item>http://google.com/search?q=%s</item>
       <item>http://wapedia.mobi/en/Special:Search?search=%s&amp;skl=Go</item>
       <item>http://www.merriam-webster.com/dictionary/%s</item>
       <item>http://www.imdb.com/find?s=all&amp;q=%s</item>
@@ -10,7 +10,7 @@
    </string-array>
    <string-array name="list_initial_name">
       <item>Answers.com</item>
-	  <item>Google</item>
+      <item>Google</item>
       <item>Wapedia</item>
       <item>Merriam-Webster</item>
       <item>IMDB</item>
